# eff

./: .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  copy_mygui.bat  copy_unicode_debug.bat
Include/: EFF3D.h  (+8 more)
Src/EFF3D/: CMakeLists.txt  EFF3D.list  EFF3DAsyncLoader.cpp  EFF3DAutoParamDataSource.cpp  EFF3DAutoParamDataSource.h  EFF3DCamera.cpp  EFF3DDevice.cpp  EFF3DFont.cpp  EFF3DForm.cpp  EFF3DFrustum.cpp  EFF3DHtmlWindow.cpp  EFF3DImgui.cpp  EFF3DImguiRender.cpp  EFF3DIndexBuffer.cpp  EFF3DMaterial.cpp  EFF3DMesh.cpp  EFF3DMeshRendererComponent.cpp  EFF3DMyTerrain.cpp  EFF3DMyTerrain.h  EFF3DMyTerrainTile.cpp  EFF3DObject.cpp  EFF3DPCH.cpp  EFF3DPCH.h  EFF3DQuery.cpp  EFF3DRenderBaseDefines.cpp  EFF3DRenderCommand.cpp  EFF3DRenderCommandBuffer.cpp  EFF3DRenderQueue.cpp  EFF3DRenderQueueManager.cpp  EFF3DRenderQueueSolid.cpp  EFF3DRenderQueueSolid.h  EFF3DRenderable.cpp  EFF3DResource.cpp  EFF3DResourceManager.cpp  EFF3DSceneManager.cpp  EFF3DShader.cpp  EFF3DStaticMeshComponent.cpp  EFF3DSubmesh.cpp  EFF3DSurface.cpp  EFF3DTerrain.cpp  (+13 more)
Src/EFF3D/Device/: EFF3DAutoParamDataSource.cpp  EFF3DAutoParamDataSource.h  EFF3DDevice.cpp  EFF3DIndexBuffer.cpp  EFF3DQuery.cpp  EFF3DSurface.cpp  EFF3DTexture.cpp  EFF3DUniformBuffer.cpp  EFF3DVertexBuffer.cpp  EFF3DVertexDeclaration.cpp
Src/EFF3D/GUI/: EFF3DFont.cpp  EFF3DForm.cpp  EFF3DHtmlWindow.cpp  EFF3DImgui.cpp  EFF3DImguiRender.cpp  EFF3DWebGui.cpp
Src/EFF3D/Platform/: EFF3DAsyncLoader.cpp
Src/EFF3D/Render/: EFF3DMaterial.cpp  EFF3DMesh.cpp  EFF3DMeshRendererComponent.cpp  EFF3DRenderBaseDefines.cpp  EFF3DRenderCommand.cpp  EFF3DRenderCommandBuffer.cpp  EFF3DRenderQueue.cpp  EFF3DRenderQueueManager.cpp  EFF3DRenderQueueSolid.cpp  EFF3DRenderable.cpp  EFF3DResource.cpp  EFF3DResourceManager.cpp  EFF3DStaticMeshComponent.cpp  EFF3DSubmesh.cpp  EFF3DTransformComponent.cpp
Src/EFF3D/Shader/: EFF3DShader.cpp  EFF3DShaderCompileManager.cpp  EFF3DShaderCompileManager.h
Src/EFF3D/Terrain/: EFF3DMyTerrain.cpp  EFF3DMyTerrainTile.cpp  EFF3DMyTerrainTile.h  EFF3DTerrain.cpp  EFF3DTerrainDataPreprocess.cpp  EFF3DTerrainDataPreprocess.h  EFF3DTerrainROAMImproveTileData.cpp  EFF3DTerrainROAMImproveTileData.h  EFF3DTerrainTile.cpp  EFF3DTerrainTile.h  EFF3DTerrainTileData.h
Src/EFFBase/: CMakeLists.txt  EFFArray.cpp  EFFBase.list  EFFBaseDefines.cpp  EFFBasePCH.cpp  EFFBasePCH.h  EFFComponent.cpp  EFFEntity.cpp  EFFEvent.cpp  EFFFunction.cpp  EFFGameObject.cpp  EFFGlobal.cpp  EFFInputManager.cpp  EFFLog.cpp  EFFMemberFunction.cpp  EFFMemory.cpp  EFFMessageCenter.cpp  EFFMutex.cpp  EFFNetClient.cpp  EFFNetServer.cpp  EFFOSVersion.cpp  EFFObject.cpp  EFFObjectManager.cpp  EFFProperty.cpp  EFFReflection.cpp  EFFRtti.cpp  EFFRttiApi.cpp  EFFSTLFile.cpp  EFFSTLRttiWrap.cpp  EFFScopeGuard.cpp  EFFSemaphore.cpp  EFFString.cpp  EFFStringHash.cpp  EFFThread.cpp  EFFUtility.cpp  GetDllExportFunctionsName.cpp  YAMLWrap.cpp  compile_commands.json  copy.bat  dllmain.cpp  (+5 more)
Src/EFFD3D9/: CMakeLists.txt  EFFD3D9.list  EFFD3D9Device.cpp  EFFD3D9Device.h  EFFD3D9Effect.cpp  EFFD3D9IndexBuffer.cpp  EFFD3D9IndexBuffer.h  EFFD3D9PCH.cpp  EFFD3D9PCH.h  EFFD3D9Query.cpp  EFFD3D9Shader.cpp  EFFD3D9Surface.cpp  EFFD3D9Surface.h  EFFD3D9Texture.cpp  EFFD3D9Texture.h  EFFD3D9VertexBuffer.cpp  EFFD3D9VertexBuffer.h  EFFD3D9VertexDeclaration.cpp  EFFD3D9VertexDeclaration.h  Exports.def  stdafx.cpp  stdafx.h
Src/EFFFramework/: CMakeLists.txt  EFFApplication.cpp  EFFFramework.cpp  EFFFramework.list  EFFFrameworkMessageManager.cpp  EFFFrameworkPCH.cpp  EFFFrameworkPCH.h  ReadMe.txt  dllmain.cpp  stdafx.h
Src/EFFGUI/: CMakeLists.txt  EFFGUI.list  EFFGUIBorderLayout.cpp  EFFGUICommonLayout.cpp  EFFGUIFlowLayout.cpp  EFFGUIGridLayout.cpp  EFFGUIImage.cpp  EFFGUILayoutInfo.cpp  EFFGUILayoutManager.cpp  EFFGUIPCH.cpp  EFFGUIPCH.h  EFFGUIRect.cpp  EFFGUIRendering.cpp  EFFGUIText.cpp  EFFGUIWidget.cpp  dllmain.cpp
Src/EFFMath/: CMakeLists.txt  EFFAabb.cpp  EFFMath.list  EFFMathFunction.cpp  EFFMathPCH.cpp  EFFMathPCH.h  EFFMatrix4.cpp  EFFPlane3.cpp  EFFPolygon3.cpp  EFFRect.cpp  EFFSegment3.cpp  EFFVector2.cpp  EFFVector3.cpp  EFFVector4.cpp  stdafx.cpp  stdafx.h
Src/EFFReflection/: CMakeLists.txt  EFFReflection.list  EFFReflectionHeader.h  EFFReflectionModule.h  EFFReflectionPCH.cpp  EFFReflectionPCH.h
Tools/EFFEditor/: CMakeLists.txt  EFFEditor.cpp  EFFEditor.h  EFFEditor.list  EFFEditor.rc  EFFEditor.sln  EFFEditor.vcxproj  EFFEditor.vcxproj.filters  EFFEditorMainFrame.cpp  EFFEditorMessageCenter.cpp  EFFEditorPCH.cpp  EFFEditorPCH.h  MainFrame.cpp  MainFrame.h  effeditor.qrc  main.cpp  stdafx.cpp  stdafx.h
Tools/EFFEditor/Deleted/: moc_EFFEditorUIDockWidgetTitleBar_cpp.b01  moc_EFFEditorUIDockWidgetTitleBar_cpp.b02  moc_EFFEditorUIDockWidgetTitleBar_cpp.b03  moc_EFFEditorUIDockWidgetTitleBar_cpp.bak  moc_EFFEditorUIInspectorPanel_cpp.bak
Tools/EFFEditor/GeneratedFiles/: qrc_effeditor.cpp  ui_effeditor.h
Tools/EFFEditor/Include/: EFFEditorHierarchyPanel.h  EFFEditorInspectorPanel.h  EFFEditorRealTimeWidget.h  EFFEditorScenePanel.h  EFFEditorTransformPanel.h
Tools/EFFEditor/Src/: EFFEditorInspectorPanel.cpp  EFFEditorRealTimeWidget.cpp  EFFEditorScenePanel.cpp  EFFEditorSceneRenderThread.cpp
Tools/EFFMyGUIEditor/: BackwardCompatibilityManager.cpp  BackwardCompatibilityManager.h  CMakeLists.txt  EFFEditorMessageCenter.cpp  EFFEditorMessageCenter.h  EFFMyGUIEditor.list  EFFMyGUIEditorPCH.cpp  EFFMyGUIEditorPCH.h  EditorWidgets.cpp  EditorWidgets.h  GroupMessage.cpp  GroupMessage.h  Main.cpp  Main.h  MainMenuControl.cpp  MainMenuControl.h  MainPanelControl.cpp  MainPanelControl.h  MainWorkspaceControl.cpp  MainWorkspaceControl.h  PossibleValue.h  ScenePanelControl.cpp  ScenePanelControl.h  SkinInfo.h  ToolsControl.cpp  ToolsControl.h  WidgetContainer.cpp  WidgetContainer.h  WidgetSelectorManager.cpp  WidgetSelectorManager.h  WidgetStyle.h  WidgetTypes.cpp  WidgetTypes.h  WorkspaceControl.cpp  WorkspaceControl.h
Tools/EFFRender/: CMakeLists.txt  EFFRender.cpp  EFFRender.h  EFFRender.list  EFFRenderPCH.cpp  EFFRenderPCH.h
(+689 files in other folders)
